--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 body {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
+  background-color: #e9ecef;
 }
 
 .row {
